--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,65 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+body,
+span {
+  font-family: "Open Sans", sans-serif;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.btn {
+  background: #0068ff;
+  border: none;
+  text-align: center;
+  color: #fff;
+  outline: none;
+  cursor: pointer;
+  padding: 6px 15px;
+  margin-right: 5px;
+}
+
+.btn-default {
+  background: gray;
+}
+
+.btn-round {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
+.field {
+  width: 100%;
+  border-radius: 3px;
+  outline: none;
+  border: 1px solid gray;
+  height: 30px;
+  padding: 5px;
+  margin-bottom: 10px;
+  box-sizing: border-box;
+}
+
+.text-right {
+  text-align: right;
+}
+
+ul {
+  padding: 0;
+  width: 100%;
+}
+
+ul li {
+  list-style: none;
+  margin: 15px 0;
+}
+
+.content {
+  width: 100%;
+  margin-left: 70px;
+}
+
+@media (max-width: 768px) {
+  .content {
+    margin: 0;
   }
 }
